# django-pro

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  compose.yaml  process.yml  pylintrc  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report_issue.md  bug_report_issue.yaml  feature_request.md  feature_request.yaml
.github/workflows/: auto-assign.yml  black.yaml  bump-version.yml  ci.yaml  create_pr.yaml  lint-format.yaml  linting.yaml  main.yaml  pr-on-push.yaml  pre-commit-hooks.yaml  pre_commit_hooks.yaml  ruff.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yaml
ch01-setup/: hello.py
ch02-hello/: Dockerfile  compose.yaml  manage.py  pyproject.toml
ch02-hello/django_project/: settings.py  urls.py
ch02-hello/django_project/settings/: __init__.py  django.py  environment.py
ch02-hello/pages/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
ch03-postgresql/: Dockerfile  compose.yaml  manage.py  pyproject.toml
ch03-postgresql/django_project/: settings.py  urls.py
ch03-postgresql/django_project/settings/: __init__.py  django.py  environment.py
ch04-bookstore/: Dockerfile  compose.yaml  manage.py  pyproject.toml
ch04-bookstore/accounts/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
ch04-bookstore/accounts/migrations/: 0001_initial.py
ch04-bookstore/bookstore/: asgi.py  settings.py  urls.py  wsgi.py
ch04-bookstore/bookstore/settings/: django.py  environment.py
docs/: conf.py  make.bat
docs/source/: conf.py  index.rst  structure.rst
