[tool.poetry]
name = "django-pro"
version = "0.1.0"
description = "Django for Professionals - William Vincent"
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.7"
# Django Dependencies
django = "^4.2.4"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
      \.*migrations\/.*
    | \.git
    | \.ruff_cache'
)/
'''

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.djlint]
profile="django"

[tool.ruff]
line-length = 100
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741", "F403"]
