[tool.poetry]
name = "django-pro"
version = "0.1.0"
description = "Django for Professionals - William Vincent"
authors = ["Carlos Regis <cr@carlosregis.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.6.1",
]
